# ArtifactInvetory

./: CMakeLists.txt  main.cpp
include/commands/: AddArtifactCommand.h  Command.h  RemoveArtifactCommand.h  UpdateArtifactCommand.h
include/controller/: ArtifactController.h
include/domain/: Artifact.h
include/filters/: AndFilter.h  ArtifactFilter.h  LocationFilter.h  MaterialFilter.h  NameFilter.h  OrFilter.h  PeriodFilter.h  TypeFilter.h
include/repository/: BaseRepository.h  CSVRepository.h  JSONRepository.h
include/ui/: ArtifactDialog.h  MainWindow.h
src/commands/: AddArtifactCommand.cpp  RemoveArtifactCommand.cpp  UpdateArtifactCommand.cpp
src/controller/: ArtifactController.cpp
src/domain/: Artifact.cpp
src/filters/: AndFilter.cpp  ArtifactFilter.cpp  LocationFilter.cpp  MaterialFilter.cpp  NameFilter.cpp  OrFilter.cpp  PeriodFilter.cpp  TypeFilter.cpp
src/repository/: BaseRepository.cpp  CSVRepository.cpp  JSONRepository.cpp
src/ui/: ArtifactDialog.cpp  MainWindow.cpp
tests/: CMakeLists.txt  TestArtifact.cpp  TestArtifact.h  TestController.cpp  TestController.h  TestFilters.cpp  TestFilters.h  TestRepository.cpp  TestRepository.h  main_test.cpp
